﻿0.9.5.0

NEW: Added xml regex. Also matches HTML tags
NEW: Large file support added
NEW: Added -q switch. When present, header and search results will not be shown

TODO

Save regex patterns to file for reuse later (if not in included list)